  - API: PreNewTownEvent, courtesy of Siris with PR #3606.
    - Cancellable event.
  - New language: Portuguese (Brazilian) Translation, courtesy of BannerGames with PR #3603.
    - use pt-br.yml as your language in the config to enable.
  - Fix Mysql databases not creating plotblocksnapshot files.
    - Closes #3589.
  - Fix Mysql databases not purging fallen towns.
    - Closes #3610.
  - REQUIRED CONFIG CHANGE:
    - Villager should be added to the protection.mob_types list.
  - Fixed: Villagers protected from damage by other Entities when not configured to be protected.
    - Pillagers were unable to harm villagers, even when villagers were not in the protected list.
    - Closes #3580. 
  - Fix town_plotbased_upkeep_minimum_amount not working when town_plotbased_upkeep_affected_by_town_level_modifier is set to false.
    - Closes #3616.
  - French translation updated by Mitsu13Ion with PR #3614.
0.95.2.6:
  - Placeholder added: %townyadvanced_nation_tag_town_formatted%
    - Shows the nation tag and the full town name.
    - If nation tag is not set, only the town name is shown.
  - REQUIRED TOWNYPERMS.YML CHANGE:
    - towny.town.spawn.ally should be added to the default nation rank.
    - adding this will mean that when the config's global_town_settings.allow_town_spawn_travel_ally will work properly when set to true. 
  - Update Reserve API, courtesy of thecreatorfromhell, with PR #3612.
  - Make sure world is properly handled when a town renames itself.
  - Fix renaming towns which have 0 plot groups.
    - Closes #3626.
0.95.2.7:
  - Changed required permission node for using /ta from towny.admin to towny.command.townyadmin
    - Fixes scenario where an admin has other /townyadmin permission nodes but not towny.admin.
  - New Permission Node: towny.command.townyadmin
    - Used to view the /townyadmin screen.
    - Gateway permission node to all other townyadmin sub-commands
    - Child node of towny.command.townyadmin.*