@@ -4043,3 +4043,5 @@ v0.92.0.11:
     - Used to view the /townyadmin screen.
     - Gateway permission node to all other townyadmin sub-commands
     - Child node of towny.command.townyadmin.*
+  - Add ability to have entities glow near War Flags (Flag War)
+    - Admin-definable radius and effect duration
